manifest/progettoFinale/dotnet.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: dotnet-api

spec:
  replicas: 2

  selector:
    matchLabels:
      app: dotnet-api

  template:
    metadata:
      labels:
        app: dotnet-api

    spec:
      containers:
        - name: dotnet-api
          image: <Image>

          resources:
            requests:
              memory: "10Mi"
              cpu: "10m"
            limits:
              memory: "128Mi"
              cpu: "500m"

          ports:
            - containerPort: 8080
            - containerPort: 8081

---
apiVersion: v1
kind: Service

metadata:
  name: dotnet-service

spec:
  selector:
    app: dotnet-api

  ports:
    - name: http
      port: 8080
      targetPort: 8080

    - name: https
      port: 8081
      targetPort: 8081
