manifest/progettoFinale/angular.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: angular-fe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: angular-fe
  template:
    metadata:
      labels:
        app: angular-fe
    spec:
      containers:
      - name: angular-fe
        image: node:20.12.2
        command:
          - sh
          - -c
        args:
          - npm install &&
            npx playwright install --with-deps &&
            npm run startDockerContainer
        workingDir: /app
        resources:
          requests:
            memory: "10Mi"
            cpu: "10m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 4200

        livenessProbe:
          httpGet:
            path: /
            port: 4200
          initialDelaySeconds: 30
          periodSeconds: 15

---
apiVersion: v1
kind: Service
metadata:
  name: angular-service
spec:
  type: ClusterIP
  selector:
    app: angular-fe
  ports:
  - port: 4200
    targetPort: 4200

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: angular-ingress
  labels:
    app.kubernetes.io/name: angular-ingress
spec:
  rules:
  - host: localhost
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: angular-service
            port: 
              number: 4200
